# my-libraly

./: .env.example  Dockerfile  LICENSE  Readme.MD  books.csv  docker-compose.yaml  nginx.conf  pyproject.toml
my_library/core/: admin.py  apps.py  const.py  tasks.py  urls.py
my_library/core/management/commands/: load_fixtures.py
my_library/core/migrations/: 0001_initial.py  0002_auto_20230612_2151.py  0003_notification.py
my_library/core/models/: __init__.py  authors.py  book_history.py  book_statuses.py  books.py  notification.py  readers.py
my_library/core/serializers/: __init__.py  authors.py  books.py  readers.py
my_library/core/signals/: book_history_writer.py
my_library/core/views/: __init__.py  authors.py  books.py  readers.py
my_library/fixtures/: authors.json  book_history.json  books.json  readers.json  users.json
my_library/my_library/: __init__.py  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
